XSCOLIBRI-259: Content inside fixed-size accordions is clipped Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@33249 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -1546,12 +1546,8 @@ fieldset.xwikimessage .xwikimessage {
 
 .accordionTabContentBox {
   background: $theme.backgroundSecondaryColor;
-  overflow: hidden;
+  overflow: auto;
   padding: 5px;
-}
-
-#allviewpanels .accordionTabContentBox, #editPanels .accordionTabContentBox {
-  overflow: auto !important;
 }
 
 /* -----------------Content Panels-----------------------*/
